--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ body, html {
 
 .ebi-header {
   text-align: left;
-  color: #45a049;
+  color: #45a049; /* Green colour taken from existing EBI web pages, pairing it with black is based on their pages also. */
   font-size: 1.2rem;
   margin-bottom: 20px;
   text-transform: uppercase;
@@ -45,6 +45,7 @@ form {
   padding: 20px;
   background-color: #efefef;
   border-radius: 10px;
+  margin-bottom: 10px;
 }
 
 label {
@@ -70,15 +71,43 @@ button {
   background-color: #4CAF50;
   color: white;
   border: none;
-  padding: 15px 30px;
   font-size: 1rem;
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  
+}
+
+#submitBtn{
+  padding: 15px 30px;
   width: 100%;
+}
+
+#downloadBtn{
+  text-align: right;
+  padding: 15px 30px;
 }
 
 button:hover {
   background-color: #45a049;
 }
 
+.download-line {
+  display:flex;
+  justify-content:space-between;
+  margin-bottom: 10px;
+}
+
+.query-show{
+  width:max-content;
+  background-color: #dfdfdf;
+  color: #676767;
+  text-align: left;
+  border-radius: 5px;
+}
+
+#apiBtn{
+  background-color: #dfdfdf;
+  color: #676767;
+  border-radius: none;
+}
