--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 body, html {
   margin: 0;
   padding: 0;
@@ -5,7 +6,6 @@ body, html {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   height: 100%;
-  background-color: #ffffff;
 }
 
 .app-container {
@@ -15,7 +15,10 @@ body, html {
   min-height: 100vh;
   text-align: center;
   padding: 50px;
+  background-color: var(--bg-colour);
 }
+
+
 
 .search-wrapper {
   width: 100%;
@@ -24,7 +27,7 @@ body, html {
 
 .ebi-header {
   text-align: left;
-  color: #45a049; /* Green colour taken from existing EBI web pages, pairing it with black is based on their pages also. */
+  color: var(--header-colour); /* Green colour taken from existing EBI web pages, pairing it with black is based on their pages also. */
   font-size: 1.2rem;
   margin-bottom: 20px;
   text-transform: uppercase;
@@ -33,7 +36,7 @@ body, html {
 }
 
 h1 {
-  color: #000;
+  color: var(--text-colour);
   font-size: 3rem;
   font-weight: bold;
   margin-bottom: 20px;
@@ -41,9 +44,17 @@ h1 {
   text-align: left;
 }
 
+.download-line {
+  color: var(--text-colour);
+  font-size: 0.9rem;
+  margin-bottom: 20px;
+  line-height: 1.2;
+  text-align: left;
+}
+
 form {
   padding: 20px;
-  background-color: #efefef;
+  background-color: var(--form-colour);
   border-radius: 10px;
   margin-bottom: 10px;
 }
@@ -51,25 +62,27 @@ form {
 label {
   display: block;
   text-align: left;
-  color: #333;
+  color: var(--label-colour);
   margin-bottom: 10px;
   font-size: 1.1rem;
   font-weight: bold;
 }
 
-input {
+input[type="text"],textarea {
   width: 100%;
   padding: 15px;
   font-size: 1rem;
-  border: 1px solid #ddd;
+  background-color: var(--input-colour);
+  color: var(--input-text-colour);
+  border: 1px solid var(--border-colour);
   border-radius: 4px;
   margin-bottom: 20px;
   box-sizing: border-box;
 }
 
 button {
-  background-color: #4CAF50;
-  color: white;
+  background-color: var(--button-colour);
+  color: var(--button-text-colour);
   border: none;
   font-size: 1rem;
   border-radius: 4px;
@@ -84,12 +97,17 @@ button {
 }
 
 #downloadBtn{
-  text-align: right;
-  padding: 15px 30px;
+  padding: 15px 15px;
 }
 
+.button-Image{
+  max-width: 60%;
+  height: auto;
+}
+
+
 button:hover {
-  background-color: #45a049;
+  background-color: var(--hover-colour);
 }
 
 .download-line {
@@ -100,14 +118,14 @@ button:hover {
 
 .query-show{
   width:max-content;
-  background-color: #dfdfdf;
-  color: #676767;
+  background-color: var(--return-colour);
+  color: var(--return-colour-text);
   text-align: left;
   border-radius: 5px;
 }
 
 #apiBtn{
-  background-color: #dfdfdf;
-  color: #676767;
+  background-color: var(--return-colour);
+  color: var(--return-colour-text);
   border-radius: none;
 }
