--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,38 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* root class allows us to define colour variables*/
+:root{
+  --bg-colour: #ffffff;
+  --header-colour: #45A049;
+  --text-colour: #000;
+  --form-colour: #efefef;
+  --label-colour: #333;
+  --input-colour: #FFFFFF;
+  --input-text-colour: #000000;
+  --button-colour: #4CAF50;
+  --button-text-colour: #FFFFFF;
+  --hover-colour: #45A049;
+  --return-colour: #dfdfdf;
+  --return-colour-text: #676767;
+  --toggle-bg:var(--header-colour);
+  --toggle-fg:var(--button-colour);
+}
+
+[data-theme="dark"] {
+  --bg-colour: #0A0A0A;
+  --header-colour: #37833A;
+  --text-colour: #FFFFFF;
+  --form-colour: #212121;
+  --label-colour: #EEEEEE;
+  --input-colour: #1A1A1A;
+  --input-text-colour: #FFFFFF;
+  --button-colour: #307433;
+  --button-text-colour: #000000;
+  --hover-colour: #37833A;
+  --return-colour: #303030;
+  --return-colour-text: #A9A9A9;
+  --toggle-bg:var(--header-colour);
+  --toggle-fg:var(--button-colour);
+}
