Handful of minor changes. Upon form submit, creates a JSON object with the query and the chosen model (does not create a file with this information! Just an object!). This is useful because we should be able to pass that JSON through to the backend, it will be usable for the programs there too. Additionally, we previously reset the page and made the return form invisible every time the form inputs were changed, because this would change the rest of the page. Having the JSON object protects against these errors. I also set it to make the old return object invisible upon submit, and made the return object a div with the same css as the input form (so that it isn't, erroneously, a form object).

--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,13 @@ form {
   margin-bottom: 10px;
 }
 
+.returnSection {
+  padding: 20px;
+  background-color: var(--form-colour);
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
 label {
   display: block;
   text-align: left;
